[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Background/BackgroundLevel2.png" type="Texture" id=2]
[ext_resource path="res://scripts/End.gd" type="Script" id=3]
[ext_resource path="res://assets/Player/RunAnimation/Bia/Idle.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/RunAnimation/Reset.png" type="Texture" id=5]
[ext_resource path="res://assets/NPCs/Chemical.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.45098 )

[sub_resource type="DynamicFont" id=3]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=23]
Button/styles/disabled = null
Button/styles/focus = SubResource( 19 )
Button/styles/hover = SubResource( 20 )
Button/styles/normal = SubResource( 21 )
Button/styles/pressed = SubResource( 22 )

[sub_resource type="DynamicFont" id=24]
size = 70
font_data = ExtResource( 1 )

[node name="End" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -216 )
texture = ExtResource( 2 )
centered = false

[node name="Darkener" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 1 )

[node name="Title2" type="Label" parent="."]
margin_left = 160.0
margin_top = 64.0
margin_right = 1123.0
margin_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Parabéns!"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="Title2"]
margin_left = 22.0
margin_top = 167.5
margin_right = 952.0
margin_bottom = 257.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Você finalizou o jogo"
align = 1
valign = 1

[node name="Ranking" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 435.0
margin_top = 344.0
margin_right = 848.0
margin_bottom = 434.0
theme = SubResource( 23 )
custom_colors/font_color_focus = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color = Color( 0.988235, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.976471, 0.0392157, 1 )
custom_fonts/font = SubResource( 24 )
text = "Ranking"

[node name="Credits" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 436.0
margin_top = 434.0
margin_right = 840.0
margin_bottom = 524.0
rect_pivot_offset = Vector2( -492, 56 )
theme = SubResource( 23 )
custom_colors/font_color_focus = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color = Color( 0.988235, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.976471, 0.0392157, 1 )
custom_fonts/font = SubResource( 24 )
text = "Créditos"

[node name="Menu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 436.0
margin_top = 512.0
margin_right = 840.0
margin_bottom = 602.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( -492, 56 )
theme = SubResource( 23 )
custom_colors/font_color_focus = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color = Color( 0.988235, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.976471, 0.0392157, 1 )
custom_fonts/font = SubResource( 24 )
text = "Menu"

[node name="Chemical" type="Sprite" parent="."]
position = Vector2( 1128, 580 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
flip_h = true

[node name="Idle" type="Sprite" parent="."]
position = Vector2( 328, 576 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="Reset" type="Sprite" parent="."]
position = Vector2( 152, 576 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[connection signal="pressed" from="Ranking" to="." method="_on_Ranking_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
